--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "niagara_crawler",
+  "name": "niagara-crawler",
   "version": "1.0.0",
-  "description": "Crawler to extract dynamic data from Niagara College website.",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
-    "axios": "^1.6.8",
+    "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2"
   }
